# paperacquire

./: .gitignore  README.md  pyproject.toml
paperacquire/: README.md  __init__.py  backfill.py  bibliography.py  classification.py  cli.py  graph.py  http.py  index.py  models.py  normalize.py  paths.py  preview.py  reference_llm.py  search.py  workspace.py  workspace_cli.py
paperacquire/sources/: __init__.py  alphaxiv.py  arxiv.py  crossref.py  dblp.py  huggingface.py  openalex.py  openreview_adaptive.py  semantic_scholar.py
skills/paper-acquire/: SKILL.md
skills/paper-acquire/scripts/: install-paperacquire.sh
tests/: test_search_and_venue.py  test_storage_and_tags.py  test_workspace.py  test_workspace_cli.py
